Ignoring silly stderr from oc.